# sonic-openai-cc-v2

./: Cargo.toml
src/: lib.rs
