[package]
name = "sonic-openai-cc-v2"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
image = "0.25.8"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
